# python-project-lvl2

./: .editorconfig  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: make-lint.yml  run-tests.yml
gendiff/: __init__.py  change_type.py  core.py  diff.py  gendiff.py  generate_diff.py
gendiff/classes/: change.py
gendiff/formatting/: __init__.py  core.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
gendiff/utils/: diff_generator.py  file_operations.py  file_paths.py
tests/: paths.py
tests/fixtures/gendiff/: baseFileAdded.json  baseFileChanged.json  changed.yaml
tests/fixtures/gendiff/awaitedDiffs/: added
tests/fixtures/gendiff/diffs/: changed
tests/gendiff/: diffs.py  test_generate_diff.py  test_generate_output.py
tests/gendiff/fixtures/: added_nested.diff  changed_nested.diff  diffs.py  identical_nested.diff  missing_nested.diff  outputs.py  tricky_nested.diff
tests/gendiff/fixtures/nested/: added.json  added.yml  changed.json  changed.yml  missing.json  missing.yml  tricky.json  tricky.yml
tests/gendiff/fixtures/plain/: added.yml  missing.json  missing.yml
tests/gendiff/fixtures/plain/diffs/: missing
tests/gendiff/formatting/: test_core.py  test_json.py  test_plain.py  test_stylish.py
tests/gendiff/utils/: test_file_operations.py
tests/gendiff/utils/fixtures/: expected_content.py
