[tool.poetry]
name = "hexlet-code"
version = "0.6.0"
description = "A small tool to find differences in files"
authors = ["Savin Timur <svn.tmr@bk.ru>"]
repository = 'https://github.com/svntmr/python-project-lvl2'
classifiers = [
  'Topic :: Software Development',
  'Topic :: Software Development :: Libraries :: Python Modules',
]

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "6.0"

[tool.poetry.dev-dependencies]
pre-commit = "2.17.0"
black = "21.12b0"
mypy = "v0.931"
flake8 = "4.0.1"
pytest = "7.0.0"
isort = "5.10.1"
pytest-cov = "3.0.0"
types-PyYAML = "6.0.4"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
